  17 Dec 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
  repoze-who-friendlyform-1.0.8.ebuild:
  Fix dependency on net-zope/zope-interface to dev-python/zope-interface