@@ -1,24 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST repoze.who-friendlyform-1.0.8.tar.gz 25344 SHA256 77138a94b11e8f846889fd7e025d6914e5966125869f6d75ef216801e29cdf13 SHA512 61c0783ed0f4451ecb83af4997a672bfc32c45c841cb922a90eb7a9b2ccd7977960686719d6650ef2beee055e824413573e2a79b0d6aa85b8787709d6b8e05d2 WHIRLPOOL cda67385ee9d925e714f1032c0c4daeb11d7e5e97afe762bf627a7828474c8b1486c642874e189fa84ae7001bd8ea8c1ecbe239e7fd81c0b1ff5058b18788849
-EBUILD repoze-who-friendlyform-1.0.8.ebuild 827 SHA256 f8bb1587f02b8c81bc9cd5dff7c754a6508091c5e297fbb7e8cb613f761d5d14 SHA512 d88e5dcddb629ef0b7095419ba0c86760b89df8fc745eceea7c3cddb9f5a2eb6b0ab5f86fcf485eadab6aea2700689dd1eb79e1c2f12d54e23cf1cf78c2d5f2a WHIRLPOOL 0845701ae03fedde4288e084960e276c1a15ad80c24a658bcea87b7f6e0b3a4c7b41ac41db5040068367a8fa074da77d3f7d665c07ecc28e1471dfa0c741dc02
-MISC ChangeLog 175 SHA256 29f8460d1b7f05aa04fc5cb87f2e339c9518b03eadcbfe3c1bd04505cd497ae9 SHA512 d1539a4d6eb8eb7ee73162fd1a29e390d3834ea4f3248d553a99d59cfea29c52698b0eea58b65d2e0cb5c9419d117bec977f0062c9421936a4574779f9805583 WHIRLPOOL 30b073f3a88712b3000dc0dddeeb8d6218056bb11f98f393178a34f44ca66bbcf25b667a7b9505b53b51c1fb6bf2c965b8b15b35e3678335d1f477d5d2d4c302
-MISC metadata.xml 210 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 SHA512 4554adeece55ce9adfdadba04443a3ede6ff910b96a11b77bb1f07ddd6bdbc756b8e6e1873660f8f54e67f46db1065980794a6136c6de7883b24d0ee13ff51fe WHIRLPOOL f546bd1233d5a9934ba0480881ceba944cb8ff1869c12ed2421d4ccbb247ee38dc0c7c8b979f10533ad0fc603b5e4829d0ddf174a83d0bda8e8dd62c1c873eeb
+DIST repoze.who-friendlyform-1.0.8.tar.gz 25344 BLAKE2B 48fa60a8ca419c0bd6c47caadbe37a146da956b1bcb038345ab349ccc4d53be759ad01cad79129fda043426152180fcca18a576fe871f04c983e913a5453ff50 SHA512 61c0783ed0f4451ecb83af4997a672bfc32c45c841cb922a90eb7a9b2ccd7977960686719d6650ef2beee055e824413573e2a79b0d6aa85b8787709d6b8e05d2
+EBUILD repoze-who-friendlyform-1.0.8.ebuild 803 BLAKE2B 61c908f911c6d690897c436e9ecf34360c8a77e54b408f08057d86f8eecd5165de09b5692d5bb2d5a99a28e07688fff9b9f936ce0f5e7418ff2d4df7a65fb497 SHA512 125571e8e6aa59f552b3cf0f5e5e10307d046d4968e33c2b1fa6a78f6f051a8731856fbf30688c1ed48b32752d9928fa951dfa9835b8a3643b30c0a7f77dc7c1
+MISC ChangeLog 315 BLAKE2B 098eafb5f8080a76ba6d88890e030e8716eee90c5522f92bc412f76fd34772eef18e6e22ca130c97a45f81c08f84b41d95ba1b31f713cfc5af7a996967822a89 SHA512 e4e7f07a894f69ba35b40028fbc1f0581ef529bbbd309620b86911b83021fe8f49e01ff05e880576135ac3aece889cbd3eff647c94699dba6c95200168b0c06c
+MISC metadata.xml 257 BLAKE2B 49ff4612c3ecb2ff1bec7078d2111eca9e137a175e619599f40168b984d23242aa98acfed21c557ad1df40bc11c7adda46df8699edc724d064f59c8cb31aff0b SHA512 e9125c1547f623f6f45581946756339d1de9c2f8bf7e28f1fd3fff40ef7ab073a1c8b475194988f596a2969a4b2d5ecb517acbbe8b70f420b44cdb4eb4f1b829
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUkUPuAAoJEDuWpXgki9wHjbMP/3CGkP3S2D2PoNqe7edIX8e3
-MYlzCTXcklTyGRXwye6gQ2/uPnlbQFESRUhj2XvzvRPiRdqNfHpiYrrRMtzms3ML
-D2CdbBLlA7HjY+KqyYigt4O4nwGViNmGOeD2GN7/Z3toiR9yhG0DYdkIC+pzSTXP
-bLA3+LEqwIGxrEKYge/bLIu26HP0pRnamX+EuVVxk4ASht5zVy2cuzd+PoyijLx1
-zqTXdwiWU/ZPIGA5J9X27HK59MlijWK4G2qed6CYivjJsxMH5mFl1zV/bv/bbKC2
-KDsm1OqZOPdjuVu9vdA8UkhrIy4lv1V1/ieuOY5tJPVRRhinqN4FekSyz5ME4CQR
-TamU10r0FTMAwe+4EYrJdKd1riHbkb/vBf1pK9NVm8+yJQWGPocZaPqicnGHtcbo
-P0Qo2dvLXXk+T9hL1mKmLxgtyWzHgLeI9f5yAjpOK+KaEoqq/ucyFTr+4uWqnHYA
-qBR4pQVAS42ek+s9NRA1cT/79JBkHgiCeDlvzVxlt8+s6x2XhQvSmOmEVRCeV0fz
-qh382Xr4pH4vDLEzmfqxEQPTqa7vnBEM8lYHVr4939b23/0nuBF+XwdGFN6fYWaf
-NgiONWLswCBARmW77zd1zi9JjDooya7vFftK9ZqIXHhRp1pYkdXz55WZQQaVp60q
-1fegz6LCTCjmKpfds180
-=LyFu
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCW7j+ugAKCRDP2g+bNZZC
+Ir8YAQCAX2sTDQJjewqShR5BXu0y1ASwrH8uH+v7IeUXlzeUKQD/QuIQ7DnTD90l
+rAlmav2Bwb8WjCRJ2B1tcxgvITnIRwU=
+=mHJT
 -----END PGP SIGNATURE-----
