@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<maintainer>
-<email>maintainer-needed@gentoo.org</email>
+<maintainer type="person">
+  <email>gnu_andrew@member.fsf.org</email>
+  <name>Andrew John Hughes</name>
 </maintainer>
 </pkgmetadata>
